--- a/env/acg.env
+++ b/env/acg.env
@@ -1,3 +1,3 @@
 export AWS_REGION=us-west-2
-export AWS_ACCOUNT=xxxxxxxxxxxxx
+export AWS_ACCOUNT=$(aws sts get-caller-identity| jq -r '.Account')
 export APP_NAME=aws-sinkdrain
